--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,6 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "babel-jest": "^30.2.0",
-    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0"
@@ -54,9 +53,6 @@
   },
   "jest": {
     "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
     "collectCoverage": true,
     "coverageReporters": [
       "lcov",
@@ -64,11 +60,22 @@
       "cobertura"
     ],
     "coverageDirectory": "coverage",
-    "moduleNameMapper": {
-      "^.+\\.(css|less|sass|scss)$": "identity-obj-proxy"
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
     },
     "transform": {
       "^.+\\.[jt]sx?$": "babel-jest"
-    }
+    },
+    "moduleNameMapper": {
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    },
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   }
 }
