--- a/.github/workflows/full-ci.yml
+++ b/.github/workflows/full-ci.yml
@@ -1,105 +1,129 @@
-name: Full CI/CD Pipeline
+name: Full CI
 
+# Ejecutar en pushes/PRs hacia main y permitir dispararlo manualmente.
 on:
   push:
-    branches: ["main", "develop"]
+    branches: [main]
   pull_request:
-    branches: ["main", "develop"]
+    branches: [main]
+  workflow_dispatch:
+
+# SonarCloud solo necesita permisos de lectura para PR decoration.
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   backend-tests:
-    name: Backend tests
+    name: Backend Tests
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: backend
-
     steps:
-      # Checkout repository contents.
+      # Obtener el código del backend.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install Go 1.22 toolchain.
-      - name: Set up Go
+      # Configurar Go tomando la versión del go.mod.
+      - name: Setup Go toolchain
         uses: actions/setup-go@v5
         with:
-          go-version: "1.22"
+          go-version-file: backend/go.mod
 
-      # Execute Go tests and gather coverage profile.
-      - name: Run Go tests with coverage
-        run: |
-          go test ./... -coverprofile=coverage.out
-          go tool cover -func=coverage.out
+      # Ejecutar los tests de Go y generar coverage.out en backend/.
+      - name: Run backend unit tests
+        working-directory: backend
+        run: go test ./... -coverprofile=coverage.out
 
-      # Upload coverage profile for inspection.
-      - name: Upload backend coverage
+      # Publicar el coverage para que lo consuma SonarCloud.
+      - name: Upload backend coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: backend-coverage
           path: backend/coverage.out
+          if-no-files-found: error
 
   frontend-tests:
-    name: Frontend tests
+    name: Frontend Tests
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-        working-directory: frontend
-
     steps:
-      # Checkout repository contents.
+      # Obtener el código del frontend.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install Node.js 22.x and cache npm modules.
-      - name: Set up Node.js
+      # Instalar Node.js 22.x y cachear npm para acelerar el pipeline.
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "22.x"
-          cache: "npm"
+          node-version: 22.x
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
 
-      # Install dependencies.
+      # Instalar dependencias de React.
       - name: Install dependencies
+        working-directory: frontend
         run: npm ci
 
-      # Run Jest tests with coverage report.
-      - name: Run frontend tests with coverage
+      # Ejecutar Jest con coverage para generar frontend/coverage/lcov.info.
+      - name: Run frontend unit tests
+        working-directory: frontend
+        env:
+          CI: true
         run: npm test -- --coverage --watchAll=false
 
-      # Upload Jest lcov HTML report.
-      - name: Upload frontend coverage
+      # Publicar el reporte de coverage del frontend.
+      - name: Upload frontend coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: frontend-coverage-report
-          path: frontend/coverage/lcov-report
+          path: frontend/coverage/lcov.info
+          if-no-files-found: error
+
+  sonarcloud-analysis:
+    name: SonarCloud Analysis
+    needs:
+      - backend-tests
+      - frontend-tests
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout completo para que Sonar tenga historial y blame.
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      # Recuperar los artifacts de coverage generados en los jobs previos.
+      - name: Download backend coverage artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: backend-coverage
+          path: backend
+
+      - name: Download frontend coverage artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-coverage-report
+          path: frontend/coverage
+
+      # Ejecutar el escaneo de SonarCloud usando el sonar-project.properties del repo.
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # Esperar al Quality Gate para bloquear el pipeline si falla.
+      - name: Enforce SonarCloud Quality Gate
+        uses: SonarSource/sonarqube-quality-gate-action@v1.1.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: https://sonarcloud.io
+        timeout-minutes: 15
 
   summary:
-    name: Pipeline summary
+    name: CI Summary
+    needs: sonarcloud-analysis
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests]
     if: ${{ success() }}
-
     steps:
-      # Provide a concise recap once both jobs succeed.
-      - name: Show summary
-        run: |
-          echo "✅ Backend coverage y tests completados."
-          echo "✅ Frontend coverage y tests completados."
-          echo "Artifacts disponibles para descarga desde GitHub Actions."
-
-sonarcloud-analysis:
-  name: SonarCloud Analysis
-  needs: [backend-tests, frontend-tests]
-  runs-on: ubuntu-latest
-
-  steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
-
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@v2
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # Mensaje final para dejar claro que todo pasó.
+      - name: Show success summary
+        run: echo "✅ Tests completados y Quality Gate aprobado en SonarCloud."
