--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,20 @@
-# --- SonarCloud config ---
+# --- Project metadata required by SonarCloud ---
 sonar.projectKey=tp7ingsoft3
-sonar.organization=ignaciomagoia
+sonar.organization=nachomagoia
 sonar.host.url=https://sonarcloud.io
+sonar.projectName=tp7ingsoft3
+sonar.sourceEncoding=UTF-8
 
-# --- Directorios ---
-sonar.sources=frontend,backend
-sonar.exclusions=**/node_modules/**,**/*.test.*,**/tests/**,**/coverage/**
+# --- Source layout: analyze Go backend and React frontend src only ---
+sonar.sources=backend,frontend/src
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/*_test.go,frontend/src/**/?(*.)test.*,frontend/src/**/__tests__/**
 
-# --- Reportes de coverage ---
-sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+# --- Explicit test locations (kept out of main source metrics) ---
+sonar.tests=backend,frontend/src
+sonar.test.inclusions=backend/**/*_test.go,frontend/src/**/?(*.)test.*,frontend/src/**/__tests__/**
+sonar.test.exclusions=**/node_modules/**,**/coverage/**
+
+# --- Coverage reports produced by go test and Jest ---
 sonar.go.coverage.reportPaths=backend/coverage.out
+sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+sonar.coverage.exclusions=**/node_modules/**,**/coverage/**,backend/**/*_test.go,frontend/src/**/?(*.)test.*,frontend/src/**/__tests__/**
