--- a/.github/workflows/full-ci.yml
+++ b/.github/workflows/full-ci.yml
@@ -1,137 +1,90 @@
-name: Full CI
+name: Full CI/CD Pipeline
 
-# Ejecutar en pushes/PRs hacia main y permitir dispararlo manualmente.
 on:
   push:
-    branches: [main]
+    branches: ["main", "develop"]
   pull_request:
-    branches: [main]
-  workflow_dispatch:
-
-# SonarCloud solo necesita permisos de lectura para PR decoration.
-permissions:
-  contents: read
-  pull-requests: read
+    branches: ["main", "develop"]
 
 jobs:
   backend-tests:
-    name: Backend Tests
+    name: Backend tests
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: backend
+
     steps:
-      # Obtener el código del backend.
+      # Checkout repository contents.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Configurar Go tomando la versión del go.mod.
-      - name: Setup Go toolchain
+      # Install Go 1.22 toolchain.
+      - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version-file: backend/go.mod
+          go-version: "1.22"
 
-      # Ejecutar los tests de Go y generar coverage.out en backend/.
-      - name: Run backend unit tests
-        working-directory: backend
-        run: go test ./... -coverprofile=coverage.out
+      # Execute Go tests and gather coverage profile.
+      - name: Run Go tests with coverage
+        run: |
+          go test ./... -coverprofile=coverage.out
+          go tool cover -func=coverage.out
 
-      # Publicar el coverage para que lo consuma SonarCloud.
-      - name: Upload backend coverage artifact
+      # Upload coverage profile for inspection.
+      - name: Upload backend coverage
         uses: actions/upload-artifact@v4
         with:
           name: backend-coverage
           path: backend/coverage.out
-          if-no-files-found: error
 
   frontend-tests:
-    name: Frontend Tests
+    name: Frontend tests
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+        working-directory: frontend
+
     steps:
-      # Obtener el código del frontend.
+      # Checkout repository contents.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Instalar Node.js 22.x y cachear npm para acelerar el pipeline.
-      - name: Setup Node.js
+      # Install Node.js 22.x and cache npm modules.
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 22.x
-          cache: npm
+          node-version: "22.x"
+          cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
-      # Instalar dependencias de React.
+      # Install dependencies.
       - name: Install dependencies
-        working-directory: frontend
         run: npm ci
 
-      # Ejecutar Jest con coverage para generar frontend/coverage/lcov.info.
-      - name: Run frontend unit tests
-        working-directory: frontend
-        env:
-          CI: true
+      # Run Jest tests with coverage report.
+      - name: Run frontend tests with coverage
         run: npm test -- --coverage --watchAll=false
 
-      # Publicar el reporte de coverage del frontend.
-      - name: Upload frontend coverage artifact
+      # Upload Jest lcov HTML report.
+      - name: Upload frontend coverage
         uses: actions/upload-artifact@v4
         with:
           name: frontend-coverage-report
-          path: frontend/coverage/lcov.info
-          if-no-files-found: error
-
-  sonarcloud-analysis:
-    name: SonarCloud Analysis
-    needs:
-      - backend-tests
-      - frontend-tests
-    runs-on: ubuntu-latest
-    # Solo corremos el análisis cuando tenemos referencia clara a main o PR contra main.
-    if: >
-      github.ref == 'refs/heads/main' ||
-      github.event_name == 'pull_request'
-    steps:
-      # Checkout completo para que Sonar tenga historial y blame.
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      # Recuperar los artifacts de coverage generados en los jobs previos.
-      - name: Download backend coverage artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-coverage
-          path: backend
-
-      - name: Download frontend coverage artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-coverage-report
-          path: frontend/coverage
-
-      # Ejecutar SonarCloud indicando explícitamente la carpeta base y la rama.
-      - name: Run SonarCloud scan
-        uses: SonarSource/sonarcloud-github-action@v2
-        with:
-          projectBaseDir: ${{ github.workspace }}
-          args: >
-            -Dsonar.branch.name=${{ github.ref_name }}
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Esperar al Quality Gate para bloquear el pipeline si falla.
-      - name: Enforce SonarCloud Quality Gate
-        uses: SonarSource/sonarqube-quality-gate-action@v1.1.0
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: https://sonarcloud.io
-        timeout-minutes: 15
+          path: frontend/coverage/lcov-report
 
   summary:
-    name: CI Summary
-    needs: sonarcloud-analysis
+    name: Pipeline summary
     runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
     if: ${{ success() }}
+
     steps:
-      # Mensaje final para dejar claro que todo pasó.
-      - name: Show success summary
-        run: echo "✅ Tests completados y Quality Gate aprobado en SonarCloud."
+      # Provide a concise recap once both jobs succeed.
+      - name: Show summary
+        run: |
+          echo "✅ Backend coverage y tests completados."
+          echo "✅ Frontend coverage y tests completados."
+          echo "Artifacts disponibles para descarga desde GitHub Actions."
