--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # --- Project metadata required by SonarCloud ---
-sonar.projectKey=tp7ingsoft3
+sonar.projectKey=ignaciomagoia_tp7ingsoft3
 sonar.organization=nachomagoia
 sonar.host.url=https://sonarcloud.io
 sonar.projectName=tp7ingsoft3
@@ -17,4 +17,6 @@ sonar.test.exclusions=**/node_modules/**,**/coverage/**
 # --- Coverage reports produced by go test and Jest ---
 sonar.go.coverage.reportPaths=backend/coverage.out
 sonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+
+# --- Exclude test and coverage files from overall metrics ---
 sonar.coverage.exclusions=**/node_modules/**,**/coverage/**,backend/**/*_test.go,frontend/src/**/?(*.)test.*,frontend/src/**/__tests__/**
