--- a/.github/workflows/full-ci.yml
+++ b/.github/workflows/full-ci.yml
@@ -16,23 +16,19 @@ jobs:
         working-directory: backend
 
     steps:
-      # Checkout repository contents.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install Go 1.22 toolchain.
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
           go-version: "1.22"
 
-      # Execute Go tests and gather coverage profile.
       - name: Run Go tests with coverage
         run: |
           go test ./... -coverprofile=coverage.out
           go tool cover -func=coverage.out
 
-      # Upload coverage profile for inspection.
       - name: Upload backend coverage
         uses: actions/upload-artifact@v4
         with:
@@ -48,11 +44,9 @@ jobs:
         working-directory: frontend
 
     steps:
-      # Checkout repository contents.
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Install Node.js 22.x and cache npm modules.
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
@@ -60,31 +54,56 @@ jobs:
           cache: "npm"
           cache-dependency-path: frontend/package-lock.json
 
-      # Install dependencies.
       - name: Install dependencies
         run: npm ci
 
-      # Run Jest tests with coverage report.
       - name: Run frontend tests with coverage
         run: npm test -- --coverage --watchAll=false
 
-      # Upload Jest lcov HTML report.
       - name: Upload frontend coverage
         uses: actions/upload-artifact@v4
         with:
           name: frontend-coverage-report
           path: frontend/coverage/lcov-report
 
+  sonarcloud-analysis:
+    name: SonarCloud Analysis
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Java (required for SonarCloud)
+        uses: actions/setup-java@v3
+        with:
+          distribution: "zulu"
+          java-version: "17"
+
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Run SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          projectBaseDir: .
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   summary:
     name: Pipeline summary
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests]
+    needs: [sonarcloud-analysis]
     if: ${{ success() }}
-
     steps:
-      # Provide a concise recap once both jobs succeed.
       - name: Show summary
         run: |
           echo "✅ Backend coverage y tests completados."
           echo "✅ Frontend coverage y tests completados."
+          echo "✅ Análisis de SonarCloud completado correctamente."
           echo "Artifacts disponibles para descarga desde GitHub Actions."
