--- a/.github/workflows/full-ci.yml
+++ b/.github/workflows/full-ci.yml
@@ -14,7 +14,6 @@ jobs:
       run:
         shell: bash
         working-directory: backend
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +41,6 @@ jobs:
       run:
         shell: bash
         working-directory: frontend
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -95,15 +93,52 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  e2e-tests:
+    name: E2E tests (Cypress)
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    defaults:
+      run:
+        shell: bash
+        working-directory: frontend
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.x"
+          cache: "npm"
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: Install deps
+        run: npm ci
+
+      - name: Run Cypress (start + wait + run)
+        env:
+          CYPRESS_BASE_URL: http://localhost:3000
+        run: npm run e2e
+
+      - name: Upload Cypress artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-artifacts
+          path: |
+            frontend/cypress/videos
+            frontend/cypress/screenshots
+          if-no-files-found: ignore
+
   summary:
     name: Pipeline summary
     runs-on: ubuntu-latest
-    needs: [sonarcloud-analysis]
-    if: ${{ success() }}
+    needs: [backend-tests, frontend-tests, sonarcloud-analysis, e2e-tests]
+    if: ${{ success() || needs.e2e-tests.result == 'failure' }}
     steps:
       - name: Show summary
         run: |
-          echo "✅ Backend coverage y tests completados."
-          echo "✅ Frontend coverage y tests completados."
-          echo "✅ Análisis de SonarCloud completado correctamente."
-          echo "Artifacts disponibles para descarga desde GitHub Actions."
+          echo "✅ Backend OK"
+          echo "✅ Frontend unit tests OK"
+          echo "✅ Análisis SonarCloud completado"
+          echo "✅ E2E ejecutado (ver artifacts cypress-artifacts)"
