--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "build": "react-scripts build",
     "test": "jest --coverage",
     "test:ci": "jest --coverage --runInBand --reporters=default --reporters=jest-junit",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "e2e": "start-server-and-test \"npm start\" http://localhost:3000 \"cypress run --browser chrome --headless\""
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +48,11 @@
     "babel-jest": "^30.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-junit": "^16.0.0"
+    "jest-junit": "^16.0.0",
+    "concurrently": "^9.0.0",
+    "cypress": "^13.7.0",
+    "start-server-and-test": "^2.0.0",
+    "wait-on": "^7.2.0"
   },
   "jest-junit": {
     "outputDirectory": "coverage",
